@@ -33,6 +33,7 @@ Changes:
  - Moved Fire Resistance Potion to buffs category.
 
 Bug Fixes:
+ - Fixed scrolling on a large victory drop list causing the list to disappear.
  - Fixed Flashbang tooltip.
  - Fixed typo on rich presence battle status.
 
